#21 handle code review comments, polishing